--- a/src/Layouts/Header/Header.scss
+++ b/src/Layouts/Header/Header.scss
@@ -1,10 +1,33 @@
-.header-container{
+.header-container {
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .09);
     display: flex;
-    justify-content: end;
-    gap: 80px;
-    background-color: #28293E;
-    color: white;
-    p{
+    font-size: 1.7rem;
+    height: 6rem;
+    justify-content: space-between;
+    left: 0;
+    padding: 25px 40px 25px 50px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 200;
+
+    .logo {
+        color: #2d2e32;
         cursor: pointer;
+    }
+
+    ul {
+        display: flex;
+        gap: 2rem;
+        list-style: none;
+
+        a {
+            color: #2d2e32;
+            font-weight: 600;
+            text-decoration: none;
+            transition: all .23s;
+        }
     }
 }
