--- a/src/Layouts/Header/Header.scss
+++ b/src/Layouts/Header/Header.scss
@@ -4,7 +4,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, .09);
     display: flex;
     font-size: 1.7rem;
-    height: 6rem;
+    height: 5rem;
     justify-content: space-between;
     left: 0;
     padding: 25px 40px 25px 50px;
@@ -16,6 +16,62 @@
     .logo {
         color: #2d2e32;
         cursor: pointer;
+        font-size: 1.25rem;
+    }
+
+    .hamb {
+        cursor: pointer;
+        float: right;
+        padding: 40px 20px;
+
+        .hamb-line {
+            background: var(--white);
+            display: block;
+            height: 2px;
+            position: relative;
+            width: 24px;
+
+            &::before,
+            &::after {
+                background: var(--white);
+                content: '';
+                display: block;
+                height: 100%;
+                position: absolute;
+                transition: all .2s ease-out;
+                width: 100%;
+            }
+
+            &::before {
+                top: 5px;
+            }
+
+            &::after {
+                top: -5px;
+            }
+        }
+    }
+
+    .side-menu {
+        display: none;
+
+        &:checked {
+            max-height: 100%;
+        }
+
+        &:checked~.hamb .hamb-line {
+            background: transparent;
+        }
+
+        &:checked~.hamb .hamb-line::before {
+            transform: rotate(-45deg);
+            top: 0;
+        }
+
+        &:checked~.hamb .hamb-line::after {
+            transform: rotate(45deg);
+            top: 0;
+        }
     }
 
     ul {
@@ -26,8 +82,32 @@
         a {
             color: #2d2e32;
             font-weight: 600;
+            font-size: 1rem;
             text-decoration: none;
             transition: all .23s;
+        }
+    }
+}
+
+// Responsive
+@media only screen and (max-width: 767px) {
+    .header-container {
+        max-height: none;
+        top: 0;
+        position: relative;
+        float: right;
+        width: fit-content;
+        background-color: transparent;
+
+        ul li {
+            float: left;
+        }
+
+        ul a:hover {
+            background-color: transparent;
+        }
+        .hamb{
+            display: none;
         }
     }
 }
