--- a/src/Layouts/Header/Header.scss
+++ b/src/Layouts/Header/Header.scss
@@ -3,11 +3,10 @@
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, .09);
     display: flex;
-    font-size: 1.7rem;
     height: 5rem;
     justify-content: space-between;
     left: 0;
-    padding: 25px 40px 25px 50px;
+    padding: 1.563rem 2.5rem 1.563rem 3.125rem;
     position: fixed;
     top: 0;
     width: 100%;
@@ -17,67 +16,17 @@
         color: #2d2e32;
         cursor: pointer;
         font-size: 1.25rem;
-    }
-
-    .hamb {
-        cursor: pointer;
-        float: right;
-        padding: 40px 20px;
-
-        .hamb-line {
-            background: var(--white);
-            display: block;
-            height: 2px;
-            position: relative;
-            width: 24px;
-
-            &::before,
-            &::after {
-                background: var(--white);
-                content: '';
-                display: block;
-                height: 100%;
-                position: absolute;
-                transition: all .2s ease-out;
-                width: 100%;
-            }
-
-            &::before {
-                top: 5px;
-            }
-
-            &::after {
-                top: -5px;
-            }
-        }
-    }
-
-    .side-menu {
-        display: none;
-
-        &:checked {
-            max-height: 100%;
-        }
-
-        &:checked~.hamb .hamb-line {
-            background: transparent;
-        }
-
-        &:checked~.hamb .hamb-line::before {
-            transform: rotate(-45deg);
-            top: 0;
-        }
-
-        &:checked~.hamb .hamb-line::after {
-            transform: rotate(45deg);
-            top: 0;
-        }
+        margin-right: 30px;
     }
 
     ul {
         display: flex;
         gap: 2rem;
         list-style: none;
+
+        .icon {
+            display: none;
+        }
 
         a {
             color: #2d2e32;
@@ -90,24 +39,52 @@
 }
 
 // Responsive
-@media only screen and (max-width: 767px) {
-    .header-container {
-        max-height: none;
-        top: 0;
-        position: relative;
-        float: right;
-        width: fit-content;
-        background-color: transparent;
 
-        ul li {
-            float: left;
-        }
+@media screen and (max-width: 768px) {
 
-        ul a:hover {
-            background-color: transparent;
-        }
-        .hamb{
-            display: none;
-        }
+    .header-container ul li a {
+        display: none;
     }
+
+    .header-container ul li a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .header-container.responsive .logo {
+        display: none;
+    }
+    .header-container.responsive ul {
+        display: inline-block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        /* bring your own prefixes */
+        transform: translate(-50%, -50%);
+    }
+    .header-container.responsive ul li.toggle-nav-icon{
+        position: absolute;
+        top: -15%;
+        right: -270.2%;
+    }
+    .header-container.responsive {
+        position: relative;
+        box-shadow: none;
+        height: 100vh;
+    }
+
+   
+    .header-container.responsive ul li{
+    margin-bottom:50px;
+    }
+    .header-container.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
+@media screen and (max-width:801px) {
+    
 }
