--- a/src/Layouts/MainIntro/Main.scss
+++ b/src/Layouts/MainIntro/Main.scss
@@ -43,6 +43,10 @@
                         line-height: 1.6;
                     }
 
+                    .hello-hand-icon {
+                        display: inline;
+                    }
+
                     span {
                         cursor: pointer;
                         display: flex;
@@ -61,10 +65,6 @@
 
                     img {
                         height: 6rem;
-                        position: absolute;
-                        right: 62rem;
-                        top: 13rem;
-                        width: 6rem;
                     }
                 }
             }
@@ -114,18 +114,20 @@
                         background-color: black;
                         color: white;
                     }
+
                     &.selected {
-                          background-color: black;
-                          color: white;
+                        background-color: black;
+                        color: white;
                     }
-                    &.unselected{
+
+                    &.unselected {
                         background-color: white;
                         color: black;
                     }
                 }
             }
 
-           
+
 
             .skills,
             .tools {
