--- a/src/Layouts/Header/Header.scss
+++ b/src/Layouts/Header/Header.scss
@@ -1,7 +1,7 @@
 .header-container {
     align-items: center;
     background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .09);
+    box-shadow: 0 0 0.625rem rgba(0, 0, 0, .09);
     display: flex;
     height: 8rem;
     justify-content: space-between;
@@ -16,7 +16,7 @@
         color: #2d2e32;
         cursor: pointer;
         font-size: 2rem;
-        margin-right: 30px;
+        margin-right: 1.875rem;
         margin-left: 2rem;
     }
 
@@ -88,7 +88,7 @@
 
 
     .header-container.responsive ul li {
-        margin-bottom: 50px;
+        margin-bottom: 3.125rem;
     }
 
     .header-container.responsive a {
