--- a/src/Layouts/Projects/Projects.scss
+++ b/src/Layouts/Projects/Projects.scss
@@ -36,7 +36,7 @@
             h4 {
                 color: #2d2e32;
                 font-size: 2.5rem;
-                margin-bottom: 6rem;
+                margin-bottom: 3rem;
             }
 
             .projects-list-wrapper {
@@ -69,6 +69,7 @@
                         flex-direction: column;
                         text-align: center;
                         width: 30rem;
+                        margin-top: 3rem;
 
                         .tech-stack {
 
