--- a/src/Layouts/Projects/Projects.scss
+++ b/src/Layouts/Projects/Projects.scss
@@ -121,3 +121,21 @@
         }
     }
 }
+
+// Responsive
+@media screen and (max-width: 768px) {
+    .projects {
+        .container {
+            .project-content {
+                .projects-list-wrapper {
+                    .projects-list {
+                        flex-direction: column;
+                        height: 75rem;
+                        align-items: center;
+                        gap: 0;
+                    }
+                }
+            }
+        }
+    }
+}
