--- a/src/Layouts/About/About.scss
+++ b/src/Layouts/About/About.scss
@@ -10,8 +10,7 @@
 
         img {
             border-radius: 1.7rem;
-            height: 35rem;
-            width: 41rem;
+            width: 42%;
         }
 
         .description {
@@ -50,11 +49,16 @@
 
 @media screen and (max-width: 768px) {
     .about-wrapper {
+        padding: 5rem 0;
         .about-container {
+            width: 100%;
             flex-direction: column;
             align-items: center;
             .description {
                 text-align: center;
+            }
+            img{
+                width: inherit;
             }
         }
     }
