--- a/src/Layouts/Projects/Projects.scss
+++ b/src/Layouts/Projects/Projects.scss
@@ -46,21 +46,28 @@
 
                 .projects-list {
                     display: flex;
-                    gap: 7rem;
-                    height: 40rem;
+                    height: 37rem;
                     padding: 2rem;
                     background-color: #fff;
                     border-radius: 1.7rem;
                     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+                    width: 100%;
 
                     .project-display {
+                        width: 50%;
+
                         img {
-                            background-color: hsla(0, 0%, 46%, .2);
+                            background-color: hsla(0, 0%, 46%, 0.2);
                             border-radius: 1.7rem;
-                            box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+                            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
                             height: auto;
                             overflow: hidden;
-                            width: 53rem;
+                            width: 20%;
+                            transform: translateY(0%);
+                            transition: transform 10s ease-in-out 0s;
+                            height: 100%;
+                            width: 100%;
+
                         }
                     }
 
@@ -68,11 +75,13 @@
                         display: flex;
                         flex-direction: column;
                         text-align: center;
+                        justify-content: center;
                         width: 30rem;
-                        margin-top: 3rem;
+                        width: 50%;
+                        padding: 0 6rem;
+                        height: 100%;
 
                         .tech-stack {
-
                             display: flex;
                             gap: 1rem;
                             justify-content: center;
@@ -102,12 +111,18 @@
 
                             a {
                                 color: #2d2e32;
+                                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                                padding: 1rem 1.3rem;
+                                border-radius: 1rem;
                                 font-size: 1.7rem;
                                 font-weight: 500;
-                                gap: 5px;
                                 text-decoration: none;
                                 align-items: center;
                                 display: flex;
+
+                                .fa-github {
+                                    padding-left: 1rem;
+                                }
 
                                 &:hover {
                                     color: #317EFB;
@@ -125,14 +140,24 @@
 // Responsive
 @media screen and (max-width: 768px) {
     .projects {
+        padding: 5rem 0;
+
         .container {
             .project-content {
                 .projects-list-wrapper {
                     .projects-list {
                         flex-direction: column;
-                        height: 75rem;
+                        height: 57rem;
                         align-items: center;
                         gap: 0;
+
+                        .project-display {
+                            width: 100%;
+
+                            img {
+                                width: inherit;
+                            }
+                        }
                     }
                 }
             }
