--- a/src/Layouts/Footer/Footer.scss
+++ b/src/Layouts/Footer/Footer.scss
@@ -35,3 +35,17 @@ footer {
         }
     }
 }
+
+// Responsive
+
+@media screen and (max-width: 768px) {
+    footer {
+        .footer-container {
+            .footer-content {
+                flex-direction: column;
+                gap: 1rem;
+            }
+        }
+
+    }
+}
