--- a/src/Layouts/Projects/Projects.scss
+++ b/src/Layouts/Projects/Projects.scss
@@ -152,6 +152,8 @@
 
                         .project-info {
                             width: unset;
+                            margin-bottom: 1rem;
+                            margin-top: 2rem;
                         }
 
                         .project-display {
