Adding mixins for responsiveness

--- a/src/Layouts/Footer/Footer.scss
+++ b/src/Layouts/Footer/Footer.scss
@@ -1,5 +1,5 @@
 footer {
-    background-color: #2d2e32;
+    background-color: var(--black);
     padding: 5rem 0;
     width: 100%;
     color: white;
