--- a/src/Layouts/About/About.scss
+++ b/src/Layouts/About/About.scss
@@ -1,5 +1,11 @@
+@use '../../Styles/mixins.scss' as *;
+
 .about-wrapper {
     padding: 15rem 0;
+
+    @include md {
+        padding: 5rem 0;
+    }
 
     .about-container {
         display: flex;
@@ -8,15 +14,29 @@
         max-width: 107rem;
         padding: 0 4rem;
 
+        @include md {
+            width: 100%;
+            flex-direction: column;
+            align-items: center;
+        }
+
         img {
             border-radius: 1.7rem;
             width: 42%;
+            @include md{
+                width: inherit;
+            }
         }
 
         .description {
             display: flex;
             flex-direction: column;
             gap: 1rem;
+
+            @include md {
+                text-align: center;
+
+            }
 
             h3 {
                 color: #147efb;
@@ -27,7 +47,7 @@
             }
 
             .heading {
-                color: #2d2e32;
+                color: var(--black);
                 font-family: Poppins, sans-serif;
                 font-size: 2.5rem;
                 line-height: 1.4;
@@ -45,21 +65,3 @@
     }
 }
 
-// Responsive
-
-@media screen and (max-width: 768px) {
-    .about-wrapper {
-        padding: 5rem 0;
-        .about-container {
-            width: 100%;
-            flex-direction: column;
-            align-items: center;
-            .description {
-                text-align: center;
-            }
-            img{
-                width: inherit;
-            }
-        }
-    }
-}
