--- a/src/Layouts/Contact/Contact.scss
+++ b/src/Layouts/Contact/Contact.scss
@@ -17,7 +17,7 @@
             }
 
             .contact-hit-me {
-                color: #2d2e32;
+                color: var(--black);
                 font-size: 2.5rem;
                 font-weight: 700;
             }
@@ -52,13 +52,13 @@
                     gap: 0.5rem;
 
                     h3 {
-                        color: #2d2e32;
+                        color: var(--black);
                         font-size: 1.7rem;
                     }
 
                     p,
                     a {
-                        color: #2d2e32;
+                        color: var(--black);
                         font-size: 1.7rem;
                     }
                 }
