--- a/src/Layouts/Header/Header.scss
+++ b/src/Layouts/Header/Header.scss
@@ -1,3 +1,5 @@
+@use '../../Styles/mixins.scss' as *;
+
 .header-container {
     align-items: center;
     background-color: #fff;
@@ -12,8 +14,57 @@
     width: 100%;
     z-index: 200;
 
+    &.responsive {
+        @include md {
+            position: fixed;
+            box-shadow: none;
+            height: 100%;
+        }
+
+        .logo {
+            @include md {
+                display: none;
+            }
+        }
+
+        a {
+            @include md {
+                float: none;
+                display: block;
+                text-align: left;
+            }
+        }
+
+        ul {
+            @include md {
+                display: inline-block;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                /* bring your own prefixes */
+                transform: translate(-50%, -50%);
+            }
+
+            li {
+                @include md {
+                    margin-bottom: 3.125rem;
+                }
+
+                &.toggle-nav-icon {
+                    position: absolute;
+                    bottom: 56rem;
+                    left: 39rem;
+
+                    &:hover {
+                        color: var(--blue);
+                    }
+                }
+            }
+        }
+    }
+
     .logo {
-        color: #2d2e32;
+        color: var(--black);
         cursor: pointer;
         font-size: 2rem;
         margin-right: 1.875rem;
@@ -26,76 +77,36 @@
         list-style: none;
 
         li a:hover {
-            color: #317EFB;
+            color: var(--blue);
+
         }
 
         .icon {
             display: none;
+
         }
 
         a {
-            color: #2d2e32;
+            color: var(--black);
             font-weight: 600;
             font-size: 1.8rem;
             text-decoration: none;
             transition: all .23s;
+
+            @include md {
+                display: none;
+                font-size: 3rem;
+            }
+
+            &.icon {
+                @include md {
+                    float: right;
+                    display: block;
+                    font-size: 3rem;
+                }
+            }
+
+
         }
-    }
-}
-
-// Responsive
-
-@media screen and (max-width: 768px) {
-
-    .header-container ul li a {
-        display: none;
-        font-size: 3rem;
-    }
-
-    .header-container ul li a.icon {
-        float: right;
-        display: block;
-        font-size: 3rem;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    .header-container.responsive .logo {
-        display: none;
-    }
-
-    .header-container.responsive ul {
-        display: inline-block;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        /* bring your own prefixes */
-        transform: translate(-50%, -50%);
-    }
-
-    .header-container.responsive ul li.toggle-nav-icon {
-        position: absolute;
-        bottom: 56rem;
-        left: 39rem;
-        &:hover{
-            color: #317EFB;
-        }
-    }
-
-    .header-container.responsive {
-        position: fixed;
-        box-shadow: none;
-        height: 110vh;
-    }
-
-
-    .header-container.responsive ul li {
-        margin-bottom: 3.125rem;
-    }
-
-    .header-container.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
     }
 }
