--- a/src/Layouts/Projects/Projects.scss
+++ b/src/Layouts/Projects/Projects.scss
@@ -1,6 +1,13 @@
+@use '../../Styles/mixins.scss' as *;
+
 .projects {
     background-color: #f9f9f9;
     padding: 15rem 0;
+
+    @include md {
+        padding: 5rem 0;
+
+    }
 
     .container {
         margin: 0 auto;
@@ -9,7 +16,7 @@
 
         .project-content {
             .project-title {
-                color: #2d2e32;
+                color: var(--black);
                 font-size: 1.7rem;
                 margin-bottom: 2rem;
                 position: relative;
@@ -34,7 +41,7 @@
             }
 
             h4 {
-                color: #2d2e32;
+                color: var(--black);
                 font-size: 2.5rem;
                 margin-bottom: 3rem;
             }
@@ -53,8 +60,19 @@
                     box-shadow: 0 0 10px rgba(0, 0, 0, .1);
                     width: 100%;
 
+                    @include md {
+                        flex-direction: column;
+                        height: 50%;
+                        align-items: center;
+                        gap: 0;
+                    }
+
                     .project-display {
                         width: 50%;
+
+                        @include md {
+                            width: 100%;
+                        }
 
                         img {
                             background-color: hsla(0, 0%, 46%, 0.2);
@@ -68,6 +86,10 @@
                             height: 100%;
                             width: 100%;
 
+                            @include md {
+                                width: inherit;
+
+                            }
                         }
                     }
 
@@ -79,6 +101,12 @@
                         width: 50%;
                         padding: 0 6rem;
                         height: 100%;
+
+                        @include md {
+                            width: unset;
+                            margin-bottom: 1rem;
+                            margin-top: 2rem;
+                        }
 
                         .tech-stack {
                             display: flex;
@@ -109,7 +137,7 @@
                             margin-top: 3rem;
 
                             a {
-                                color: #2d2e32;
+                                color: var(--black);
                                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
                                 padding: 1rem 1.3rem;
                                 border-radius: 1rem;
@@ -124,8 +152,7 @@
                                 }
 
                                 &:hover {
-                                    color: #317EFB;
-
+                                    color: var(--blue);
                                 }
                             }
                         }
@@ -136,36 +163,3 @@
     }
 }
 
-// Responsive
-@media screen and (max-width: 768px) {
-    .projects {
-        padding: 5rem 0;
-
-        .container {
-            .project-content {
-                .projects-list-wrapper {
-                    .projects-list {
-                        flex-direction: column;
-                        height: 50%;
-                        align-items: center;
-                        gap: 0;
-
-                        .project-info {
-                            width: unset;
-                            margin-bottom: 1rem;
-                            margin-top: 2rem;
-                        }
-
-                        .project-display {
-                            width: 100%;
-
-                            img {
-                                width: inherit;
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
