--- a/src/Layouts/Contact/Contact.scss
+++ b/src/Layouts/Contact/Contact.scss
@@ -1,3 +1,5 @@
+@use '../../Styles/mixins.scss' as *;
+
 .contact-container {
     background-color: white;
     padding: 8rem 0;
@@ -8,6 +10,10 @@
         padding: 0 4rem;
 
         .contact-info {
+            @include md {
+                text-align: center;
+            }
+
             .contact-title {
                 color: #147efb;
                 font-size: 1.7rem;
@@ -29,10 +35,19 @@
             gap: 8rem;
             margin-top: 6rem;
 
+            @include md {
+                flex-direction: column;
+                align-items: center;
+            }
+
             .contact__icon-box {
                 align-items: center;
                 display: flex;
                 gap: 1.5rem;
+
+                @include md {
+                    flex-direction: column;
+                }
 
                 span {
                     background-color: #fff;
@@ -51,6 +66,10 @@
                     flex-direction: column;
                     gap: 0.5rem;
 
+                    @include md {
+                        align-items: center;
+                    }
+
                     h3 {
                         color: var(--black);
                         font-size: 1.7rem;
@@ -67,24 +86,3 @@
     }
 }
 
-// Responsive
-@media screen and (max-width: 768px) {
-    .contact-container{
-        .contact-wrapper{
-            .contact-info{
-                text-align: center;
-            }
-            .contact-icons{
-                flex-direction: column;
-                align-items: center;
-                .contact__icon-box{
-                    flex-direction: column;
-                    .contact__info{
-                        align-items: center;
-                    }
-                }
-            }
-        }
-    }
-
-}
