--- a/src/Layouts/Footer/Footer.scss
+++ b/src/Layouts/Footer/Footer.scss
@@ -1,3 +1,4 @@
+@use '../../Styles/mixins.scss' as *;
 footer {
     background-color: var(--black);
     padding: 5rem 0;
@@ -13,6 +14,11 @@ footer {
             align-items: center;
             display: flex;
             justify-content: space-between;
+
+            @include md {
+                flex-direction: column;
+                gap: 1rem;
+            }
 
             h1 {
                 font-size: 1.8rem;
@@ -33,19 +39,5 @@ footer {
                 }
             }
         }
-    }
-}
-
-// Responsive
-
-@media screen and (max-width: 768px) {
-    footer {
-        .footer-container {
-            .footer-content {
-                flex-direction: column;
-                gap: 1rem;
-            }
-        }
-
     }
 }
