--- a/src/Styles/mixins.scss
+++ b/src/Styles/mixins.scss
@@ -17,13 +17,13 @@
 }
 
 @mixin xl {
-    @media only screen and (min-width: 1280px) {
+    @media only screen and (max-width: 1280px) {
         @content;
     }
 }
 
 @mixin xxl {
-    @media only screen and (min-width: 1536px) {
+    @media only screen and (max-width: 1536px) {
         @content;
     }
 }
