--- a/src/Layouts/Projects/Projects.scss
+++ b/src/Layouts/Projects/Projects.scss
@@ -127,6 +127,7 @@
                                 font-weight: 500;
                                 text-align: center;
                                 text-transform: none;
+                                border-radius: 1rem;
                             }
                         }
 
