tech stack added

--- a/src/Layouts/Projects/Projects.scss
+++ b/src/Layouts/Projects/Projects.scss
@@ -115,7 +115,9 @@
                             margin-top: 1rem;
 
                             .tech1,
-                            .tech2 {
+                            .tech2,
+                            .tech3,
+                            .tech4 {
                                 background-color: #fff;
                                 box-shadow: 0 0 10px rgba(0, 0, 0, .1);
                                 color: #000 !important;
