--- a/src/Styles/mixins.scss
+++ b/src/Styles/mixins.scss
@@ -1,3 +1,8 @@
+@mixin xs {
+    @media only screen and (max-width: 460px) {
+        @content;
+    }
+}
 @mixin sm {
     @media only screen and (max-width: 640px) {
         @content;
