--- a/src/Layouts/MainIntro/Main.scss
+++ b/src/Layouts/MainIntro/Main.scss
@@ -8,6 +8,18 @@
     position: relative;
     width: 100%;
 
+    @include lg {
+        height: 66vh;
+    }
+
+    @include xl {
+        height: 66vh;
+    }
+
+    @include xxl {
+        height: 66vh;
+    }
+
     @include md {
         height: 143rem;
     }
@@ -51,7 +63,8 @@
                         line-height: 1.2;
                         margin-bottom: 2rem;
                         margin-top: 2rem;
-                        @include xs{
+
+                        @include xs {
                             font-size: 5rem;
                         }
                     }
@@ -116,7 +129,8 @@
                     position: absolute;
                     top: 83rem;
                 }
-                @include xs{
+
+                @include xs {
                     top: 86rem;
                 }
             }
@@ -138,7 +152,8 @@
                     position: absolute;
                     top: 89rem;
                 }
-                @include xs{
+
+                @include xs {
                     top: 93rem;
                 }
 
@@ -149,7 +164,8 @@
                     text-align: center;
                     justify-content: center;
                     line-height: 3rem;
-                    @include xs{
+
+                    @include xs {
                         flex-direction: column;
                         align-items: center;
                     }
@@ -265,7 +281,8 @@
                 @include md {
                     top: 110rem;
                 }
-                @include xs{
+
+                @include xs {
                     top: 116rem;
                 }
             }
