--- a/src/Layouts/Projects/Projects.scss
+++ b/src/Layouts/Projects/Projects.scss
@@ -100,6 +100,7 @@
                         justify-content: center;
                         padding: 0 6rem;
                         height: 100%;
+                        width: 50%;
 
                         @include md {
                             margin-bottom: 1rem;
